--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,19 @@
 {
     "name": "mossengine/alteredcarbon",
+    "type": "library",
     "description": "Carbon extended library with NotSO8601 support",
-    "keywords": ["date", "time", "timezone", "daylight"],
+    "keywords": [
+        "date",
+        "time",
+        "DateTime",
+        "timezone",
+        "daylight"
+    ],
+    "homepage": "https://github.com/Mossengine/AlteredCarbon",
+    "support": {
+        "issues": "https://github.com/Mossengine/AlteredCarbon/issues",
+        "source": "https://github.com/Mossengine/AlteredCarbon"
+    },
     "license": "GNU",
     "authors": [
         {
@@ -9,17 +21,39 @@
             "email": "brenmoss@mossengine.com"
         }
     ],
-    "type": "project",
     "require": {
-		"php": ">=5.4",
-        "nesbot/carbon": "1.22.1"
+        "php": ">=5.3.0",
+        "nesbot/carbon": "1.22.1",
+        "symfony/translation": "~2.6 || ~3.0 || ~4.0"
     },
-	"require-dev": {
-		"phpunit/phpunit": "5.2.*"
+    "require-dev": {
+        "friendsofphp/php-cs-fixer": "~2",
+        "phpunit/phpunit": "~4.0 || ~5.0"
     },
-	"autoload": {
+    "autoload": {
         "psr-4": {
             "Mossengine\\AlteredCarbon\\": "src/"
         }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Tests\\": "tests/"
+        }
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "1.0.0-dev"
+        }
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "scripts": {
+        "test": [
+            "@phpunit",
+            "@phpcs"
+        ],
+        "phpunit": "phpunit",
+        "phpcs": "php-cs-fixer fix -v --diff --dry-run"
     }
 }
