--- a/composer.json
+++ b/composer.json
@@ -42,7 +42,7 @@
     },
     "extra": {
         "branch-alias": {
-            "master": "1.0-dev"
+            "dev-master": "1.0-dev"
         }
     },
     "config": {
