--- a/.travis.yml
+++ b/.travis.yml
@@ -1,91 +1,20 @@
 language: php
 
-cache:
-  apt: true
-  directories:
-    - $HOME/.composer/cache
+php:
+    - 5.3
+    - 5.4
+    - 5.5
+    - 5.6
+    - 7.0
+    - 7.1
+    - 7.2
 
-env:
-  global:
-    - setup=basic
-    - coverage=false
-    - phpstan=false
-
-sudo: false
-
-before_install:
-  - sudo apt-get update && sudo apt-get --reinstall install -qq language-pack-fr
-  - if [[ $coverage = 'false' ]]; then phpenv config-rm xdebug.ini; fi
-
-install:
-  - if [[ $phpstan = 'true' ]]; then travis_retry composer require --dev phpstan/phpstan; fi
-  - if [[ $setup = 'basic'  ]]; then travis_retry composer update --prefer-dist --no-interaction --no-suggest; fi
-  - if [[ $setup = 'stable' ]]; then travis_retry composer update --prefer-dist --no-interaction --no-suggest --prefer-stable; fi
-  - |
-    if [[ $setup = 'lowest' ]]; then
-        composer require sebastian/comparator:"~1.2.4" --no-update --dev
-        travis_retry composer update --prefer-dist --no-interaction --no-suggest --prefer-stable --prefer-lowest
-    fi
+before_script:
+    - travis_retry composer self-update
+    - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-  - vendor/bin/phpunit --verbose --coverage-clover=coverage.xml
-  - if [[ $phpstan = 'true' ]]; then vendor/bin/phpstan analyse --configuration phpstan.neon --level 3 src tests; fi
+    - vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
-  - if [[ $coverage = 'true' ]]; then bash <(curl -s https://codecov.io/bash); fi
-
-branches:
-  only:
-    - gh-pages
-    - /.*/
-
-matrix:
-  include:
-    - php: 5.3
-      dist: precise
-    - php: 5.3
-      dist: precise
-      env: setup=lowest
-    - php: 5.3
-      dist: precise
-      env: setup=stable
-
-    - php: 5.4
-    - php: 5.4
-      env: setup=lowest
-    - php: 5.4
-      env: setup=stable
-
-    - php: 5.5
-    - php: 5.5
-      env: setup=lowest
-    - php: 5.5
-      env: setup=stable
-
-    - php: 5.6
-    - php: 5.6
-      env: setup=lowest
-    - php: 5.6
-      env: setup=stable
-
-    - php: 7.0
-    - php: 7.0
-      env: setup=lowest
-    - php: 7.0
-      env: setup=stable
-
-    - php: 7.1
-    - php: 7.1
-      env: setup=lowest
-    - php: 7.1
-      env: setup=stable
-
-    - php: 7.2
-      env:
-        - coverage=true
-    - php: 7.2
-      env: setup=lowest
-    - php: 7.2
-      env: setup=stable
-
-  fast_finish: true
+    - bash <(curl -s https://codecov.io/bash)
