--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,5 @@
 language: php
 
-php:
-    - 5.3
-    - 5.4
-    - 5.5
-    - 5.6
-    - 7.0
-    - 7.1
-    - 7.2
-
 before_script:
     - travis_retry composer self-update
     - travis_retry composer install --no-interaction --prefer-source --dev
@@ -18,3 +9,15 @@ script:
 
 after_success:
     - bash <(curl -s https://codecov.io/bash)
+
+matrix:
+  include:
+    - php: 5.3
+      dist: precise
+
+    - php: 5.4
+    - php: 5.5
+    - php: 5.6
+    - php: 7.0
+    - php: 7.1
+    - php: 7.2
