--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,17 @@
 language: php
 
 before_script:
-    - travis_retry composer self-update
-    - travis_retry composer install --no-interaction --prefer-source --dev
+  - travis_retry composer self-update
+  - travis_retry composer install --no-interaction --prefer-source --dev
 
 script:
-    - vendor/bin/phpunit --coverage-clover=coverage.xml
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
-    - bash <(curl -s https://codecov.io/bash)
+  - bash <(curl -s https://codecov.io/bash)
+
+install:
+  - travis_retry composer update --prefer-dist --no-interaction --no-suggest --prefer-stable
 
 matrix:
   include:
@@ -21,3 +24,5 @@ matrix:
     - php: 7.0
     - php: 7.1
     - php: 7.2
+
+  fast_finish: true
